feat(trino 469): changes for dview plugin and kafka