@@ -37,13 +37,16 @@ import io.trino.parquet.Column;
 import io.trino.parquet.Field;
 import io.trino.parquet.ParquetCorruptionException;
 import io.trino.parquet.ParquetDataSource;
-import io.trino.parquet.ParquetDataSourceId;
 import io.trino.parquet.ParquetReaderOptions;
+import io.trino.parquet.metadata.BlockMetadata;
+import io.trino.parquet.metadata.ColumnChunkMetadata;
 import io.trino.parquet.metadata.FileMetadata;
 import io.trino.parquet.metadata.ParquetMetadata;
+import io.trino.parquet.metadata.PrunedBlockMetadata;
 import io.trino.parquet.predicate.TupleDomainParquetPredicate;
 import io.trino.parquet.reader.MetadataReader;
 import io.trino.parquet.reader.ParquetReader;
+import io.trino.parquet.reader.RowGroupInfo;
 import io.trino.parquet.reader.TrinoColumnIndexStore;
 import io.trino.plugin.base.metrics.FileFormatDataSourceStats;
 import io.trino.plugin.dview.DviewConfig;
@@ -56,7 +59,6 @@ import io.trino.plugin.hive.HiveColumnHandle;
 import io.trino.plugin.hive.HiveColumnProjectionInfo;
 import io.trino.plugin.hive.ReaderColumns;
 import io.trino.plugin.hive.parquet.ParquetPageSource;
-import io.trino.plugin.hive.parquet.ParquetPageSourceFactory;
 import io.trino.plugin.hive.parquet.TrinoParquetDataSource;
 import io.trino.spi.TrinoException;
 import io.trino.spi.connector.ColumnHandle;
@@ -71,6 +73,7 @@ import io.trino.spi.predicate.Domain;
 import io.trino.spi.predicate.TupleDomain;
 import io.trino.spi.type.TypeManager;
 import org.apache.parquet.column.ColumnDescriptor;
+import org.apache.parquet.hadoop.metadata.ColumnPath;
 import org.apache.parquet.internal.filter2.columnindex.ColumnIndexStore;
 import org.apache.parquet.io.MessageColumnIO;
 import org.apache.parquet.schema.GroupType;
@@ -101,27 +104,21 @@ import static io.trino.parquet.ParquetTypeUtils.getColumnIO;
 import static io.trino.parquet.ParquetTypeUtils.getDescriptors;
 import static io.trino.parquet.ParquetTypeUtils.getParquetTypeByName;
 import static io.trino.parquet.ParquetTypeUtils.lookupColumnByName;
+import static io.trino.parquet.metadata.PrunedBlockMetadata.createPrunedColumnsMetadata;
 import static io.trino.parquet.predicate.PredicateUtils.predicateMatches;
 import static io.trino.plugin.dview.DviewErrorCode.DVIEW_BAD_DATA;
 import static io.trino.plugin.dview.DviewErrorCode.DVIEW_CANNOT_OPEN_SPLIT;
-import static io.trino.plugin.dview.DviewErrorCode.DVIEW_CURSOR_ERROR;
 import static io.trino.spi.predicate.Utils.nativeValueToBlock;
 import static io.trino.spi.type.BigintType.BIGINT;
-import static java.lang.String.format;
 import static java.util.Objects.requireNonNull;
 import static org.joda.time.DateTimeZone.UTC;
 
 public class DviewPageSourceProvider
         implements ConnectorPageSourceProvider
 {
-    /**
-     * If this object is passed as one of the columns for {@code createPageSource},
-     * it will be populated as an additional column containing the index of each
-     * row read.
-     */
     public static final DviewColumnHandle PARQUET_ROW_INDEX_COLUMN = new DviewColumnHandle(
             "$parquet$row_index",
-            BIGINT, // no real column index
+            BIGINT,
             -1,
             false,
             null);
@@ -193,7 +190,13 @@ public class DviewPageSourceProvider
         }
     }
 
-    private ConnectorPageSource createParquetDataSource(String filePath, List<DviewColumnHandle> columnHandles, boolean useColumnNames, TupleDomain<DviewColumnHandle> effectivePredicate, Date partitionDate, Time partitionTime)
+    private ConnectorPageSource createParquetDataSource(
+            String filePath,
+            List<DviewColumnHandle> columnHandles,
+            boolean useColumnNames,
+            TupleDomain<DviewColumnHandle> effectivePredicate,
+            Date partitionDate,
+            Time partitionTime)
             throws InterruptedException, IOException
     {
         log.info("Entering into DviewPageSourceProvider::createParquetDataSource");
@@ -209,98 +212,65 @@ public class DviewPageSourceProvider
                 int start = 0;
                 int domainCompactionThreshold = 100;
                 long length = inputFile.length();
-                ParquetMetadata parquetMetadata =
-                        MetadataReader.readFooter(dataSource, Optional.empty());
+                ParquetMetadata parquetMetadata = MetadataReader.readFooter(dataSource, Optional.empty());
                 FileMetadata fileMetaData = parquetMetadata.getFileMetaData();
                 MessageType fileSchema = fileMetaData.getSchema();
-                Optional<MessageType> message =
-                        getParquetMessageType(columnHandles, useColumnNames, fileSchema);
-                MessageType requestedSchema =
-                        message.orElse(new MessageType(fileSchema.getName(), ImmutableList.of()));
+                Optional<MessageType> message = getParquetMessageType(columnHandles, useColumnNames, fileSchema);
+                MessageType requestedSchema = message.orElse(new MessageType(fileSchema.getName(), ImmutableList.of()));
                 MessageColumnIO messageColumn = getColumnIO(fileSchema, requestedSchema);
-                Map<List<String>, ColumnDescriptor> descriptorsByPath =
-                        getDescriptors(fileSchema, requestedSchema);
-                TupleDomain<ColumnDescriptor> parquetTupleDomain =
-                        parquetReaderOptions.isIgnoreStatistics()
-                                ? TupleDomain.all()
-                                :
-                                getParquetTupleDomain(descriptorsByPath, effectivePredicate,
-                                        fileSchema,
-                                        useColumnNames);
-                TupleDomainParquetPredicate parquetPredicate =
-                        buildPredicate(requestedSchema, parquetTupleDomain, descriptorsByPath,
-                                dateTimeZone);
+                Map<List<String>, ColumnDescriptor> descriptorsByPath = getDescriptors(fileSchema, requestedSchema);
+                TupleDomain<ColumnDescriptor> parquetTupleDomain = parquetReaderOptions.isIgnoreStatistics()
+                        ? TupleDomain.all()
+                        : getParquetTupleDomain(descriptorsByPath, effectivePredicate, fileSchema, useColumnNames);
+                TupleDomainParquetPredicate parquetPredicate = buildPredicate(requestedSchema, parquetTupleDomain, descriptorsByPath, dateTimeZone);
 
                 long nextStart = 0;
-                ImmutableList.Builder<BlockMetaData> blocks = ImmutableList.builder();
-                ImmutableList.Builder<Long> blockStarts = ImmutableList.builder();
-                ImmutableList.Builder<Optional<ColumnIndexStore>> columnIndexes =
-                        ImmutableList.builder();
-
-                for (BlockMetaData block : parquetMetadata.getBlocks()) {
-                    long firstDataPage = block.getColumns().get(0).getFirstDataPageOffset();
-                    Optional<ColumnIndexStore> columnIndex =
-                            getColumnIndexStore(dataSource, block, descriptorsByPath,
-                                    parquetTupleDomain, parquetReaderOptions);
-                    Optional<BloomFilterStore> bloomFilterStore =
-                            getBloomFilterStore(dataSource, block, parquetTupleDomain,
-                                    parquetReaderOptions);
+                ImmutableList.Builder<RowGroupInfo> rowGroups = ImmutableList.builder();
+                for (BlockMetadata block : parquetMetadata.getBlocks()) {
+                    long firstDataPage = block.columns().getFirst().getFirstDataPageOffset();
+                    Optional<ColumnIndexStore> columnIndex = getColumnIndexStore(dataSource, block, descriptorsByPath, parquetTupleDomain, parquetReaderOptions);
+                    Optional<BloomFilterStore> bloomFilterStore = getBloomFilterStore(dataSource, block, parquetTupleDomain, parquetReaderOptions);
+                    PrunedBlockMetadata prunedBlockMetadata = createPrunedColumnsMetadata(block, dataSource.getId(), descriptorsByPath);
 
                     if (start <= firstDataPage && firstDataPage < start + length
-                            && predicateMatches(
-                            parquetPredicate,
-                            block,
-                            dataSource,
-                            descriptorsByPath,
-                            parquetTupleDomain,
-                            columnIndex,
-                            bloomFilterStore,
-                            UTC,
-                            domainCompactionThreshold)) {
-                        blocks.add(block);
-                        blockStarts.add(nextStart);
-                        columnIndexes.add(columnIndex);
+                            && predicateMatches(parquetPredicate, prunedBlockMetadata, dataSource, descriptorsByPath, parquetTupleDomain, columnIndex, bloomFilterStore, UTC, domainCompactionThreshold)) {
+                        rowGroups.add(new RowGroupInfo(
+                                prunedBlockMetadata,
+                                nextStart,
+                                columnIndex));
                     }
-                    nextStart += block.getRowCount();
+                    nextStart += block.rowCount();
                 }
 
-                Optional<ReaderColumns> readerProjections =
-                        projectBaseColumns(columnHandles, useColumnNames);
+                Optional<ReaderColumns> readerProjections = projectBaseColumns(columnHandles, useColumnNames);
                 List<DviewColumnHandle> baseColumns = readerProjections.map(projection ->
                                 projection.get().stream()
                                         .map(DviewColumnHandle.class::cast)
                                         .toList())
                         .orElse(columnHandles);
-                ParquetDataSourceId dataSourceId = dataSource.getId();
                 ParquetPageSource.Builder pageSourceBuilder = ParquetPageSource.builder();
                 ImmutableList.Builder<Column> parquetColumnFieldsBuilder = ImmutableList.builder();
                 int sourceChannel = 0;
                 for (DviewColumnHandle column : baseColumns) {
-                    if (Objects.equals(column.getColumnName(),
-                            PARQUET_ROW_INDEX_COLUMN.getColumnName())) {
+                    if (Objects.equals(column.getColumnName(), PARQUET_ROW_INDEX_COLUMN.getColumnName())) {
                         pageSourceBuilder.addRowIndexColumn();
                     }
                     else if (column.getColumnName().equals(dviewConfig.getPartitionFirst()) && partitionDate != null) {
                         pageSourceBuilder.addConstantColumn(
-                                nativeValueToBlock(column.getColumnType(),
-                                        partitionDate.getTime() / 86400000));
+                                nativeValueToBlock(column.getColumnType(), partitionDate.getTime() / 86400000));
                     }
                     else if (column.getColumnName().equals(dviewConfig.getPartitionSecond()) && partitionTime != null) {
                         pageSourceBuilder.addConstantColumn(
-                                nativeValueToBlock(column.getColumnType(),
-                                        partitionTime.getTime()));
+                                nativeValueToBlock(column.getColumnType(), partitionTime.getTime()));
                     }
                     else {
-                        Optional<org.apache.parquet.schema.Type> parquetType =
-                                getBaseColumnParquetType(column, fileSchema, useColumnNames);
+                        Optional<org.apache.parquet.schema.Type> parquetType = getBaseColumnParquetType(column, fileSchema, useColumnNames);
                         if (parquetType.isEmpty()) {
                             pageSourceBuilder.addNullColumn(column.getColumnType());
                             continue;
                         }
-                        String columnName = useColumnNames ? column.getColumnName() :
-                                fileSchema.getFields().get(column.getOrdinalPosition()).getName();
-                        Optional<Field> field = constructField(column.getColumnType(),
-                                lookupColumnByName(messageColumn, columnName));
+                        String columnName = useColumnNames ? column.getColumnName() : fileSchema.getFields().get(column.getOrdinalPosition()).getName();
+                        Optional<Field> field = constructField(column.getColumnType(), lookupColumnByName(messageColumn, columnName));
                         if (field.isEmpty()) {
                             pageSourceBuilder.addNullColumn(column.getColumnType());
                             continue;
@@ -310,34 +280,28 @@ public class DviewPageSourceProvider
                         sourceChannel++;
                     }
                 }
-                ParquetPageSourceFactory.ParquetReaderProvider parquetReaderProvider =
-                        fields -> new ParquetReader(
-                                Optional.ofNullable(fileMetaData.getCreatedBy()),
-                                fields,
-                                blocks.build(),
-                                blockStarts.build(),
-                                dataSource,
-                                dateTimeZone,
-                                newSimpleAggregatedMemoryContext(),
-                                parquetReaderOptions,
-                                exception -> handleException(dataSourceId, exception),
-                                Optional.of(parquetPredicate),
-                                columnIndexes.build(),
-                                Optional.empty());
-                return pageSourceBuilder.build(
-                        parquetReaderProvider.createParquetReader(
-                                parquetColumnFieldsBuilder.build()));
+
+                ParquetReader parquetReader = new ParquetReader(
+                        Optional.ofNullable(fileMetaData.getCreatedBy()),
+                        parquetColumnFieldsBuilder.build(),
+                        rowGroups.build(),
+                        dataSource,
+                        dateTimeZone,
+                        newSimpleAggregatedMemoryContext(),
+                        parquetReaderOptions,
+                        exception -> DviewParquetPageSource.handleException(dataSource.getId(), exception),
+                        Optional.of(parquetPredicate),
+                        Optional.empty());
+
+                return pageSourceBuilder.build(parquetReader);
             }
             catch (FileNotFoundException fileNotFoundException) {
-                // File got deleted during overwrite
                 int sleepMs = retryCount * sleepIntervalMs;
                 log.error("File not found, File maybe deleted for overwrite, retrying in {0} ms", sleepMs);
                 Thread.sleep(sleepMs);
                 lastErrorEncountered = fileNotFoundException;
             }
             catch (IOException ioException) {
-                // ParquetCorruptionException
-                // File maybe being read while getting overwritten
                 int sleepMs = retryCount * sleepIntervalMs;
                 log.error("File maybe getting overwritten, retrying in {0} ms", sleepMs);
                 Thread.sleep(sleepMs);
@@ -364,7 +328,6 @@ public class DviewPageSourceProvider
             ColumnDescriptor descriptor = null;
 
             Optional<org.apache.parquet.schema.Type> baseColumnType = getBaseColumnParquetType(columnHandle, fileSchema, useColumnNames);
-            // Parquet file has fewer column than partition
             if (baseColumnType.isEmpty()) {
                 continue;
             }
@@ -398,7 +361,7 @@ public class DviewPageSourceProvider
 
     public static Optional<ColumnIndexStore> getColumnIndexStore(
             ParquetDataSource dataSource,
-            BlockMetaData blockMetadata,
+            BlockMetadata blockMetadata,
             Map<List<String>, ColumnDescriptor> descriptorsByPath,
             TupleDomain<ColumnDescriptor> parquetTupleDomain,
             ParquetReaderOptions options)
@@ -408,7 +371,7 @@ public class DviewPageSourceProvider
         }
 
         boolean hasColumnIndex = false;
-        for (ColumnChunkMetaData column : blockMetadata.getColumns()) {
+        for (ColumnChunkMetadata column : blockMetadata.columns()) {
             if (column.getColumnIndexReference() != null && column.getOffsetIndexReference() != null) {
                 hasColumnIndex = true;
                 break;
@@ -432,132 +395,12 @@ public class DviewPageSourceProvider
 
         return Optional.of(new TrinoColumnIndexStore(dataSource, blockMetadata, columnsReadPaths, columnsFilteredPaths));
     }
-//    public static Optional<Field> constructField(io.trino.spi.type.Type trinoType, ColumnIO columnIO)
-//    {
-//        if (columnIO == null) {
-//            return Optional.empty();
-//        }
-//        boolean required = columnIO.getType().getRepetition() != OPTIONAL;
-////        int repetitionLevel = columnIO.getRepetitionLevel();
-////        int definitionLevel = columnIO.getDefinitionLevel();
-//        io.trino.spi.type.Type type = column.getColumnType();
-////        if (type instanceof RowType rowType) {
-////            GroupColumnIO groupColumnIO = (GroupColumnIO) columnIO;
-////            ImmutableList.Builder<Optional<Field>> fieldsBuilder = ImmutableList.builder();
-////            List<RowType.Field> fields = rowType.getFields();
-////            boolean structHasParameters = false;
-////            for (int i = 0; i < fields.size(); i++) {
-////                RowType.Field rowField = fields.get(i);
-////                ColumnIdentity fieldIdentity = subColumns.get(i);
-////                Optional<Field> field = constructField(new FieldContext(rowField.getType(), fieldIdentity), lookupColumnById(groupColumnIO, fieldIdentity.getId()));
-////                structHasParameters |= field.isPresent();
-////                fieldsBuilder.add(field);
-////            }
-////            if (structHasParameters) {
-////                return Optional.of(new GroupField(type, repetitionLevel, definitionLevel, required, fieldsBuilder.build()));
-////            }
-////            return Optional.empty();
-////        }
-////        if (type instanceof MapType mapType) {
-////            GroupColumnIO groupColumnIO = (GroupColumnIO) columnIO;
-////            GroupColumnIO keyValueColumnIO = getMapKeyValueColumn(groupColumnIO);
-////            if (keyValueColumnIO.getChildrenCount() != 2) {
-////                return Optional.empty();
-////            }
-////            List<ColumnIdentity> subColumns = context.getColumnIdentity().getChildren();
-////            checkArgument(subColumns.size() == 2, "Not a map: %s", context);
-////            ColumnIdentity keyIdentity = subColumns.get(0);
-////            ColumnIdentity valueIdentity = subColumns.get(1);
-////            // TODO validate column ID
-////            Optional<Field> keyField = constructField(new FieldContext(mapType.getKeyType(), keyIdentity), keyValueColumnIO.getChild(0));
-////            // TODO validate column ID
-////            Optional<Field> valueField = constructField(new FieldContext(mapType.getValueType(), valueIdentity), keyValueColumnIO.getChild(1));
-////            return Optional.of(new GroupField(type, repetitionLevel, definitionLevel, required, ImmutableList.of(keyField, valueField)));
-////        }
-////        if (type instanceof ArrayType arrayType) {
-////            GroupColumnIO groupColumnIO = (GroupColumnIO) columnIO;
-////            if (groupColumnIO.getChildrenCount() != 1) {
-////                return Optional.empty();
-////            }
-////            List<ColumnIdentity> subColumns = context.getColumnIdentity().getChildren();
-////            checkArgument(subColumns.size() == 1, "Not an array: %s", context);
-////            ColumnIdentity elementIdentity = getOnlyElement(subColumns);
-////            // TODO validate column ID
-////            Optional<Field> field = constructField(new FieldContext(arrayType.getElementType(), elementIdentity), getArrayElementColumn(groupColumnIO.getChild(0)));
-////            return Optional.of(new GroupField(type, repetitionLevel, definitionLevel, required, ImmutableList.of(field)));
-////        }
-//        PrimitiveColumnIO primitiveColumnIO = (PrimitiveColumnIO) columnIO;
-//        return Optional.of(new PrimitiveField(type, required, primitiveColumnIO.getColumnDescriptor(), primitiveColumnIO.getId()));
-//    }
-
-    private static TrinoException handleException(ParquetDataSourceId dataSourceId, Exception exception)
-    {
-        if (exception instanceof TrinoException) {
-            return (TrinoException) exception;
-        }
-        if (exception instanceof ParquetCorruptionException) {
-            return new TrinoException(DVIEW_BAD_DATA, exception);
-        }
-        System.out.println(Arrays.toString(exception.getStackTrace()));
-        return new TrinoException(DVIEW_CURSOR_ERROR, format("Failed to read Parquet file: %s", dataSourceId), exception);
-    }
-
-    /**
-     * Creates a mapping between the input {@code columns} and base columns if required.
-     */
-    public static Optional<ReaderColumns> projectColumns(List<DviewColumnHandle> columns)
-    {
-        requireNonNull(columns, "columns is null");
-        return Optional.empty();
-        // No projection is required if all columns are base columns
-//        if (columns.stream().allMatch(IcebergColumnHandle::isBaseColumn)) {
-//            return Optional.empty();
-//        }
-//
-//        ImmutableList.Builder<ColumnHandle> projectedColumns = ImmutableList.builder();
-//        ImmutableList.Builder<Integer> outputColumnMapping = ImmutableList.builder();
-//        Map<Integer, Integer> mappedFieldIds = new HashMap<>();
-//        int projectedColumnCount = 0;
-//
-//        for (IcebergColumnHandle column : columns) {
-//            int baseColumnId = column.getBaseColumnIdentity().getId();
-//            Integer mapped = mappedFieldIds.get(baseColumnId);
-//
-//            if (mapped == null) {
-//                projectedColumns.add(column.getBaseColumn());
-//                mappedFieldIds.put(baseColumnId, projectedColumnCount);
-//                outputColumnMapping.add(projectedColumnCount);
-//                projectedColumnCount++;
-//            }
-//            else {
-//                outputColumnMapping.add(mapped);
-//            }
-//        }
-//
-//        return Optional.of(new ReaderColumns(projectedColumns.build(), outputColumnMapping.build()));
-    }
 
     public static Optional<MessageType> getParquetMessageType(List<DviewColumnHandle> columns, boolean useColumnNames, MessageType fileSchema)
     {
-//        Optional<MessageType> message = projectSufficientColumns(columns)
-//                .map(projection -> projection.get().stream()
-//                        .map(HiveColumnHandle.class::cast)
-//                        .toList())
-//                .orElse(columns).stream()
-//                .filter(column -> column.getColumnType() == REGULAR)
-//                .map(column -> getColumnType(column, fileSchema, useColumnNames))
-//                .filter(Optional::isPresent)
-//                .map(Optional::get)
-//                .map(type -> new MessageType(fileSchema.getName(), type))
-//                .reduce(MessageType::union);
-//        return message;
         return Optional.of(fileSchema);
     }
 
-    /**
-     * Creates a set of sufficient columns for the input projected columns and prepares a mapping between the two. For example,
-     * if input {@param columns} include columns "a.b" and "a.b.c", then they will be projected from a single column "a.b".
-     */
     public static Optional<ReaderColumns> projectSufficientColumns(List<HiveColumnHandle> columns)
     {
         requireNonNull(columns, "columns is null");
@@ -584,13 +427,11 @@ public class DviewPageSourceProvider
 
         Map<DereferenceChain, Integer> pickedColumns = new HashMap<>();
 
-        // Pick a covering column for every column
         for (HiveColumnHandle columnHandle : columns) {
             DereferenceChain column = dereferenceChains.inverse().get(columnHandle);
             List<DereferenceChain> orderedPrefixes = column.getOrderedPrefixes();
             DereferenceChain chosenColumn = null;
 
-            // Shortest existing prefix is chosen as the input.
             for (DereferenceChain prefix : orderedPrefixes) {
                 if (dereferenceChains.containsKey(prefix)) {
                     chosenColumn = prefix;
@@ -602,11 +443,9 @@ public class DviewPageSourceProvider
             int inputBlockIndex;
 
             if (pickedColumns.containsKey(chosenColumn)) {
-                // Use already picked column
                 inputBlockIndex = pickedColumns.get(chosenColumn);
             }
             else {
-                // Add a new column for the reader
                 sufficientColumns.add(dereferenceChains.get(chosenColumn));
                 pickedColumns.put(chosenColumn, sufficientColumns.size() - 1);
                 inputBlockIndex = sufficientColumns.size() - 1;
@@ -625,20 +464,6 @@ public class DviewPageSourceProvider
             return baseColumnType;
         }
         GroupType baseType = baseColumnType.get().asGroupType();
-//        Optional<List<org.apache.parquet.schema.Type>> subFieldTypesOptional = dereferenceSubFieldTypes(baseType, column.getHiveColumnProjectionInfo().get());
-//
-//        // if there is a mismatch between parquet schema and the hive schema and the column cannot be dereferenced
-//        if (subFieldTypesOptional.isEmpty()) {
-//            return Optional.empty();
-//        }
-//
-//        List<org.apache.parquet.schema.Type> subfieldTypes = subFieldTypesOptional.get();
-//        org.apache.parquet.schema.Type type = subfieldTypes.get(subfieldTypes.size() - 1);
-//        for (int i = subfieldTypes.size() - 2; i >= 0; --i) {
-//            GroupType groupType = subfieldTypes.get(i).asGroupType();
-//            type = new GroupType(groupType.getRepetition(), groupType.getName(), ImmutableList.of(type));
-//        }
-//        return Optional.of(new GroupType(baseType.getRepetition(), baseType.getName()));
         return Optional.of(baseType);
     }
 
@@ -653,14 +478,6 @@ public class DviewPageSourceProvider
         return Optional.empty();
     }
 
-    /**
-     * Dereferencing base parquet type based on projection info's dereference names.
-     * For example, when dereferencing baseType(level1Field0, level1Field1, Level1Field2(Level2Field0, Level2Field1))
-     * with a projection info's dereferenceNames list as (basetype, Level1Field2, Level2Field1).
-     * It would return a list of parquet types in the order of (level1Field2, Level2Field1)
-     *
-     * @return child fields on each level of dereferencing. Return Optional.empty when failed to do the lookup.
-     */
     private static Optional<List<org.apache.parquet.schema.Type>> dereferenceSubFieldTypes(GroupType baseType, HiveColumnProjectionInfo projectionInfo)
     {
         checkArgument(baseType != null, "base type cannot be null when dereferencing");
@@ -681,40 +498,10 @@ public class DviewPageSourceProvider
         return Optional.of(typeBuilder.build());
     }
 
-    /**
-     * Creates a mapping between the input {@param columns} and base columns based on baseHiveColumnIndex or baseColumnName if required.
-     */
     public static Optional<ReaderColumns> projectBaseColumns(List<DviewColumnHandle> columns, boolean useColumnNames)
     {
         requireNonNull(columns, "columns is null");
         return Optional.empty();
-
-        // No projection is required if all columns are base columns
-//        if (columns.stream().allMatch(HiveColumnHandle::isBaseColumn)) {
-//            return Optional.empty();
-//        }
-//
-//        ImmutableList.Builder<ColumnHandle> projectedColumns = ImmutableList.builder();
-//        ImmutableList.Builder<Integer> outputColumnMapping = ImmutableList.builder();
-//        Map<Object, Integer> mappedHiveBaseColumnKeys = new HashMap<>();
-//        int projectedColumnCount = 0;
-//
-//        for (HiveColumnHandle column : columns) {
-//            Object baseColumnKey = useColumnNames ? column.getBaseColumnName() : column.getBaseHiveColumnIndex();
-//            Integer mapped = mappedHiveBaseColumnKeys.get(baseColumnKey);
-//
-//            if (mapped == null) {
-//                projectedColumns.add(column.getBaseColumn());
-//                mappedHiveBaseColumnKeys.put(baseColumnKey, projectedColumnCount);
-//                outputColumnMapping.add(projectedColumnCount);
-//                projectedColumnCount++;
-//            }
-//            else {
-//                outputColumnMapping.add(mapped);
-//            }
-//        }
-//
-//        return Optional.of(new ReaderColumns(projectedColumns.build(), outputColumnMapping.build()));
     }
 
     private static class DereferenceChain
@@ -749,9 +536,6 @@ public class DviewPageSourceProvider
             return Objects.hash(name, indices);
         }
 
-        /**
-         * Get Prefixes of this Dereference chain in increasing order of lengths
-         */
         public List<DereferenceChain> getOrderedPrefixes()
         {
             ImmutableList.Builder<DereferenceChain> prefixes = ImmutableList.builder();
